# OCSF-Mapper-Tool

./: README.md  advisory.md  app.py  app.yaml  config.toml  generator.py  pyproject.toml  requirements.txt
ocsf_mapper/: __init__.py  advisory.py  cli.py  fetch_ocsf.py  generator.py  ocsf_types.py  pipeline.py  reference_library.py  schema_loader.py
src/: classifier.py  ocsf_types.py  profiler.py  validator.py
src/ocsf_mapper/: __init__.py  cli.py  pipeline.py
tests/: test_types_and_validator.py
