[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocsf-mapper"
version = "0.4.0"
description = "Generate Lakewatch presets from vendor samples by mapping to OCSF schemas via Claude"
readme = "PACKAGE_README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Rearc Data Engineering" }]
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ocsf-mapper = "ocsf_mapper.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ocsf_mapper = ["style_reference.yaml", "ocsf_schema_cache/**/*.json"]
